apply fetch join on post